# serializer version: 1
# name: test_all_entities[switch.heat_pump_frost_protection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.heat_pump_frost_protection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Frost protection',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Frost protection',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'frost_protection',
    'unique_id': 'atw-unit-uuid-1_frost_protection',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.heat_pump_frost_protection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Frost protection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.heat_pump_frost_protection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.heat_pump_overheat_protection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.heat_pump_overheat_protection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Overheat protection',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Overheat protection',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'overheat_protection',
    'unique_id': 'atw-unit-uuid-1_overheat_protection',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.heat_pump_overheat_protection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Overheat protection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.heat_pump_overheat_protection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.living_room_ac_frost_protection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.living_room_ac_frost_protection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Frost protection',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Frost protection',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'frost_protection',
    'unique_id': 'ata-unit-uuid-1_frost_protection',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.living_room_ac_frost_protection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living Room AC Frost protection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_room_ac_frost_protection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.living_room_ac_overheat_protection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.living_room_ac_overheat_protection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Overheat protection',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Overheat protection',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'overheat_protection',
    'unique_id': 'ata-unit-uuid-1_overheat_protection',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.living_room_ac_overheat_protection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'switch',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living Room AC Overheat protection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_room_ac_overheat_protection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
